--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.fusion_solar_py.client import FusionSolarClient"
+    "from src.fusion_solar_py.client import FusionSolarClient\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,16 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client._login()"
+    "client.login()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -60,12 +61,13 @@
    "source": [
     "for plant in plants:\n",
     "    print(plant.name)\n",
+    "    # print(json.dumps(plant.get_plant_flow(), indent=4))\n",
     "    # r= plant.get_plant_stats(return_resp=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,17 +76,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PV energy yield power 0.000 kW\n",
+      "Consumption 0.192 kW\n",
+      "Grid connection power 0.000 kW\n",
+      "Battery charge/discharge power -0.192 kW\n",
+      "Consumption today 0.00 kWh\n",
+      "Export today 0.00 kWh\n",
+      "Import today 0.00 kWh\n",
+      "Output active power 0.192 kW\n",
+      "Cumulative energy 16963.96 kWh\n",
+      "Production 0.00 kWh\n",
+      "Device feature code 3 15204544 \n",
+      "Device feature code 2 4222993 \n",
+      "Inverter rated power 8.000 kW\n",
+      "PV1 input voltage 0.0 V\n",
+      "PV1 input current 0.00 A\n",
+      "PV2 input voltage 0.0 V\n",
+      "PV2 input current 0.00 A\n",
+      "PV3 input voltage 0.0 V\n",
+      "PV3 input current 0.00 A\n",
+      "PV4 input voltage 0.0 V\n",
+      "PV4 input current 0.00 A\n",
+      "PV5 input voltage 0.0 V\n",
+      "PV5 input current 0.00 A\n",
+      "PV6 input voltage 0.0 V\n",
+      "PV6 input current 0.00 A\n",
+      "PV7 input voltage 0.0 V\n",
+      "PV7 input current 0.00 A\n",
+      "PV8 input voltage 0.0 V\n",
+      "PV8 input current 0.00 A\n",
+      "PV9 input voltage 0.0 V\n",
+      "PV9 input current 0.00 A\n",
+      "PV10 input voltage 0.0 V\n",
+      "PV10 input current 0.00 A\n",
+      "PV11 input voltage 0.0 V\n",
+      "PV11 input current 0.00 A\n",
+      "PV12 input voltage 0.0 V\n",
+      "PV12 input current 0.00 A\n",
+      "PV13 input voltage 0.0 V\n",
+      "PV13 input current 0.00 A\n",
+      "PV14 input voltage 0.0 V\n",
+      "PV14 input current 0.00 A\n",
+      "PV15 Input Voltage 0.0 V\n",
+      "PV15 Input Current 0.00 A\n",
+      "PV16 Input Voltage 0.0 V\n",
+      "PV16 Input Current 0.00 A\n",
+      "PV17 Input Voltage 0.0 V\n",
+      "PV17 Input Current 0.00 A\n",
+      "PV18 Input Voltage 0.0 V\n",
+      "PV18 Input Current 0.00 A\n",
+      "PV19 Input Voltage 0.0 V\n",
+      "PV19 Input Current 0.00 A\n",
+      "PV20 Input Voltage 0.0 V\n",
+      "PV20 Input Current 0.00 A\n",
+      "PV21 Input Voltage 0.0 V\n",
+      "PV21 Input Current 0.00 A\n",
+      "PV22 Input Voltage 0.0 V\n",
+      "PV22 Input Current 0.00 A\n",
+      "PV23 Input Voltage 0.0 V\n",
+      "PV23 Input Current 0.00 A\n",
+      "PV24 Input Voltage 0.0 V\n",
+      "PV24 Input Current 0.00 A\n",
+      "Total input power 0.000 kW\n",
+      "Grid voltage/Grid AB line voltage 412.3 V\n",
+      "BC line voltage 410.8 V\n",
+      "CA line voltage 411.4 V\n",
+      "Grid phase A voltage 237.9 V\n",
+      "Grid phase B voltage 237.9 V\n",
+      "Grid phase C voltage 237.0 V\n",
+      "Grid phase A current 0.350 A\n",
+      "Grid phase B current 0.343 A\n",
+      "Grid phase C current 0.349 A\n",
+      "Active power 0.194 kW\n",
+      "Output reactive power -0.002 kVar\n",
+      "Power factor 1.000 \n",
+      "Grid frequency 50.02 Hz\n",
+      "Inverter efficiency 100.00 %\n",
+      "Device internal temperature 40.1 ℃\n",
+      "Inverter status Grid connected \n",
+      "Inverter startup time 2022-08-26 07:25:51 \n",
+      "Inverter shutdown time N/A \n",
+      "Cumulative energy 16963.96 kWh\n",
+      "Total DC input energy 18033.03 kWh\n",
+      "Daily energy 0.57 kWh\n",
+      "Monthly energy 1131.33 kWh\n",
+      "Annual energy 8460.50 kWh\n",
+      "MPPT 1 DC cumulative energy 9068.49 kWh\n",
+      "MPPT 2 DC cumulative energy 8964.54 kWh\n",
+      "MPPT 3 DC cumulative energy 0.00 kWh\n",
+      "MPPT 4 DC cumulative energy 0.00 kWh\n",
+      "MPPT 5 DC cumulative energy 0.00 kWh\n",
+      "MPPT 6 DC cumulative energy 0.00 kWh\n",
+      "MPPT 7 DC cumulative energy 0.00 kWh\n",
+      "MPPT 8 DC cumulative energy 0.00 kWh\n",
+      "MPPT 9 DC cumulative energy 0.00 kWh\n",
+      "MPPT 10 DC cumulative energy 0.00 kWh\n",
+      "Accumulated amount of absorbed electricity 83.98 kWh\n",
+      "Status Normal \n",
+      "Positive active energy 12686.46 kWh\n",
+      "Negative active energy 1326.38 kWh\n",
+      "Reactive power 291 Var\n",
+      "Power factor 0.000 \n",
+      "Grid frequency 50.00 Hz\n",
+      "Phase A active power 5 W\n",
+      "Phase B active power 45 W\n",
+      "Phase C active power -50 W\n",
+      "Voltage/Phase A voltage 238.3 V\n",
+      "Phase B voltage 237.8 V\n",
+      "Phase C voltage 237.5 V\n",
+      "Current/Phase A current 0.46 A\n",
+      "Phase B current 0.82 A\n",
+      "Phase C current -0.59 A\n",
+      "Active power 0 W\n",
+      "Charge/Discharge mode Maximum self-consumption \n",
+      "Rated capacity 10 kWh\n",
+      "Battery SOC 60.0 %\n",
+      "Battery SOH 0.0 %\n",
+      "Battery operating status Operating \n",
+      "Battery voltage 617.8 V\n",
+      "Charge/Discharge power -0.190 kW\n",
+      "Total charge 2341.96 kWh\n",
+      "Total discharge 2182.24 kWh\n",
+      "Charging 0.00 kWh\n",
+      "Discharging 0.84 kWh\n",
+      "Backup time N/A min\n",
+      "Working status Discharging \n"
+     ]
+    }
+   ],
    "source": [
-    "import json\n",
-    "\n",
+    "units=set()\n",
+    "values=[]\n",
     "for device in devices:\n",
-    "    print(device.name, device.type)\n",
-    "    print(json.dumps(device.get_device_stats(), indent=4))\n",
+    "    for metric in device.get_device_stats().values():\n",
+    "        print(metric.name, metric.value, metric.unit)\n",
+    "        units.add(metric.unit)\n",
+    "        # values.append(metric.value)\n",
+    "        # break\n",
+    "    # print(device.name, device.type)\n",
+    "    # print(json.dumps(device.get_device_stats(), indent=4))\n",
     "    # r= device.get_device_stats(return_resp=True)\n",
-    "    # break\n"
+    "    # break\n",
+    "# print(units)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0.000', '8.000', 'Normal', 'Maximum self-consumption']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values"
    ]
   },
   {
