changes for publishing on pypi

--- a/readme.ipynb
+++ b/readme.ipynb
@@ -14,8 +14,9 @@
     "\n",
     "\n",
     "A python client for the HuaweiFusionSolar API used to monitor solar power plants.\n",
-    "There were 2 main goals: \n",
-    "- being able to retreive realtime statistics for use in Home Assistant -> see this integration: https://github.com/janmolemans/huawei_fusionsolar\n",
+    "For use of this api there is thus no openAPI account needed, your normal credentials to log in to the web portal should work.\n",
+    "This client had 2 main goals: \n",
+    "- being able to retreive realtime statistics and change parameters for use in Home Assistant -> see this integration: https://github.com/janmolemans/huawei_fusionsolar\n",
     "- being able to retreive historical statistics for plotting and stuff\n",
     "\n",
     "This client uses the https://region01eu5.fusionsolar.huawei.com end point by default. It is\n",
@@ -31,6 +32,20 @@
     "This file is a markdown export of the readme.ipynb notebook.\n",
     "\n",
     "```jupyter nbconvert readme.ipynb --to markdown```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Install"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`pip install huawei-fusionsolar`"
    ]
   },
   {
