--- a/readme.ipynb
+++ b/readme.ipynb
@@ -57,11 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.fusion_solar_py.client import FusionSolarClient\n",
+    "# from src.fusion_solar_py.client import FusionSolarClient\n",
+    "from fusion_solar_py.client import FusionSolarClient\n",
     "import json"
    ]
   },
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +236,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('huis')",
+   "display_name": "Python 3.10.4 ('test')",
    "language": "python",
    "name": "python3"
   },
@@ -270,7 +271,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1d0b768e2b76c2537c749061f5993f0ad055a5baf8d4865276f027f00fed732e"
+    "hash": "34dd195c82d98ea1fd0f576f69cba24ac4319de302e7f18a25a9aeac4bb35a8a"
    }
   }
  },
